Closed Bug 1617308 Opened 6 years ago Closed 6 years ago

Fieldsets not announced as groupings in VoiceOver

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla76
Tracking Status
firefox76 --- verified

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

With the given url:
data:text/html,<fieldset><legend>Fields</legend><input aria-label="hello"></fieldset>

Safari announces the "Fields" group before entering, and after leaving. In Firefox the group is not read at all.

Assignee: nobody → eitan
Priority: P2 → P1
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/743667e67c24 Provide AXDescription for named groupings. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76

Reproduced the issue using Firefox 75.0a1 (20200221214911) on macOS 10.12.
The issue is verified fixed with Firefox 76.0b4 (20200412214314) on macOS 10.12.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: