Bug 1617308 - Provide AXDescription for named groupings. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D66336

--HG--
extra : moz-landing-system : lando